overlays/uksouth-sandbox/olympus/metis/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api.${cluster_name}.${cluster_location}.bink.sh-metis
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: api.${cluster_name}.${cluster_location}.bink.sh
      http:
        paths:
          - path: /payment_service
            pathType: Prefix
            backend:
              service:
                name: metis-api
                port:
                  number: 80
  tls:
    - hosts:
        - api.${cluster_name}.${cluster_location}.bink.sh
